assets/css/responsive.css
/* ... */
@media only screen and (max-width: 575px) {
  .xs-column-reverse {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: reverse;
    -ms-flex-direction: column-reverse;
    flex-direction: column-reverse;
  }

  .mh-header {
    padding: 0;
  }

  .home-padding {
    padding: 100px 0;
  }

  .mh-home .hero-img {
    margin-bottom: 30px;
  }

  .mh-home .mh-header-info {
    padding: 0;
    text-align: center;
    margin-top: 40px;
  }

  .mh-about .mh-about-inner {
    padding-left: 5px;
    text-align: center;
    margin: 30px 15px;
  }

  .mh-skills .mh-professional-skill {
    padding-right: 0;
    padding: 0 15px;
  }

  .mh-experince h3 {
    margin-bottom: 30px;
    text-align: center;
  }

  .mh-education {
    margin-bottom: 30px;
    padding-right: 0;
  }

  .mh-work {
    padding-left: 0;
    margin-bottom: 30px;
  }

  .portfolio-nav ul li {
    margin-bottom: 20px;
  }

  .mh-skills .mh-professional-skill {
    margin-bottom: 50px;
  }

  .section-separator {
    padding: 30px 0;
  }

  .mh-home .mh-header-info .mh-promo {
    margin-bottom: 20px;
  }

  .mh-featured-project-content {
    margin-top: 40px;
    text-align: center;
  }

  .mh-featured-project .mh-featured-item .mh-featured-project-content p {
    text-align: center;
  }

  .mh-quates .each-quates {
    padding: 30px;
  }

  .mh-map {
    padding: 0px;
    margin-top: 40px;
  }

  .mh-footer-3 .mh-footer-address .mh-address-footer-item {
    display: block;
    padding: 20px 0px;
  }

  .mh-footer-3 .mh-footer-address .mh-address-footer-item .each-info {
    padding-left: 20px;
    text-align: center;
  }

  .mh-footer-3 .mh-footer-address .mh-address-footer-item .each-info {
    padding-left: 0;
    text-align: center;
  }

  .xs-no-padding {
    padding: 0;
  }

  .mh-portfolio-modal-inner {
    margin-right: 0;
  }

  .mh-portfolio-modal {
    padding: 10px;
  }

  .mh-portfolio-modal-img {
    margin-top: 50px;
  }

  .mh-service .mh-service-item {
    margin-bottom: 20px;
    text-align: center;
  }

  .social-icon {
    display: block;
    margin: 0 auto;
    float: none;
    text-align: center;
  }

  .social-icon li {
    list-style: none;
    float: none;
    text-align: center;
    display: inline-block;
    margin-bottom: 0px;
    margin-right: 4px;
    margin-left: 4px;
  }

  .text-left.text-xs-center {
    text-align: center !important;
  }
}

@media only screen and (max-width: 420px) {
  .mh-home .img-border {
    height: 280px;
    width: 280px;
  }

  .home-padding {
    padding: 60px 0;
  }
}

/*# sourceMappingURL=responsive.css.map */

